framework/reef-native-panel-windows/src/native_panel_renderer/snapshots/reef_native_panel_windows__native_panel_renderer__snapshot_tests__snapshot_tests__expanding_10.snap
---
source: framework/reef-native-panel-windows/src/native_panel_renderer/snapshot_tests.rs
assertion_line: 67
expression: snapshot
---
scenario: expanding_10
primitives:
  - type: RoundRect
    frame:
      x: 0
      y: 0
      width: 227.2
      height: 69.6
    radius: 21.4
    color: "rgb(18, 18, 22)"
metadata:
  timestamp: 2026-05-30
  display_mode: Expanding
  animation_progress: 0.1
